make links on main page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h2>Список наших парикмахеров</h2>
 <ul>
     <% @barbers.each do |barber| %>
-        <li><%= barber.name %></li>    
+        <li><a href="/barber/<%= barber.id %>"><%= barber.name %></li>    
     <% end %>
 </ul>
